[tool.poetry]
name = "mazegen-42"
version = "1.0.0"
description = "A tool for generating and solving 42-themed mazes."
authors = ["Zdaouari", "momahdam"]
readme = "README.md"
packages = [{include = "mazegen"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
